--- a/css/style.css
+++ b/css/style.css
@@ -6,49 +6,46 @@ body {
     border-top: 10px solid #79a1b1 !important;
 }
 
-a {
-    text-decoration: :none;
-    color: #333;
-}
 
-.logo {
-    text-align: center;
-    margin-top: 40px;
-    margin-bottom: 5px;
-}
-.logo img {
+.background {
+    background-color: black;
     display: inline-block;
-    margin-bottom: 5px;
+    width: 100%; 
+    height: 400px;
+    object-fit: cover;
 }
 
-.header {
-    width: 1200px;
-    margin: 0 auto;
+.topimg {
+    position: relative;
+    }
+
+.topimg img {
+    width: 100%; 
+    height: 400px;
+    object-fit: cover;
+    opacity: 0.65;
 }
 
-.header ul {
-    display: flex;
+.topimg p {
+    color: white;
+    font-size: 100px;
+    font-weight: 600; 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
 }
 
-.header ul li {
-    width: 200px;
-    text-align: center;
-    border-right: 1px solid #ddd;
+.time {
+    color: rgba(39, 39, 207, 0.73);
+    font-size: 20px;
+    padding: 5px;
 }
 
-.header ul li:first-child {
-    border-left: 1px solid #ddd;
+.one {
+    padding-left: 20px;
+    padding:5px 0px 5px 20px;
 }
 
-.header ul li a {
-    display:block;
-}
-
-.header_image {
-    margin-top: 15px; 
-    text-align: center;
-}
-
-.header_image img{
-    display: inline-block;
-}
