--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,57 @@ body {
     font-size: 15px;
     border-top: 10px solid #79a1b1 !important;
 }
+/* 
+---------------- header ---------------- 
+*/
 
+header {
+    width: 100%; /* 幅いっぱいを指定 */
+    height: 60px; /* 高さを50pxに指定 */
+    background: rgb(100, 200, 200); /* 背景色にグレーを指定 */
+    /* padding: 20px 50px; ヘッダーに上下左右それぞれ余白を指定 */
+    box-sizing: border-box; /* padding分を含んで幅を100%にするため */
+    position: fixed; /* ウィンドウを基準に画面に固定 */
+    top: 0; /* 上下の固定位置を上から0pxにする */
+    left: 0; /* 左右の固定位置を左から0pxにする */
+    display: flex; /* 中の要素を横並びにする */
+    align-items: center; /* 中の要素を上下中央に並べる */
+}
+
+header h1 {
+    padding: 30px 30px 30px 30px;
+    color: rgb(255, 255, 255);
+}
+
+header .gnav .menu {
+    display: flex; /* 中の要素を横並びにする */
+    justify-content: flex-end;
+}
+
+header .gnav .menu li {
+    padding:30px 30px 30px 30px;
+}
+
+header .gnav .menu li a {
+    color: rgb(255, 255, 255);
+}
+/* 
+---------------- main ---------------- 
+*/
 
 .background {
+    /* padding-top: 60px; */
     background-color: black;
     display: inline-block;
     width: 100%; 
-    height: 400px;
+    height: 460px;
     object-fit: cover;
 }
 
 .topimg {
+    padding-top: 60px;
     position: relative;
-    }
+}
 
 .topimg img {
     width: 100%; 
@@ -27,7 +65,7 @@ body {
 }
 
 .topimg p {
-    color: white;
+    color: rgb(100, 200, 200);
     font-size: 100px;
     font-weight: 600; 
     position: absolute;
