--- a/css/style.css
+++ b/css/style.css
@@ -77,13 +77,21 @@ header .gnav .menu li a {
 }
 
 .time {
-    color: rgba(39, 39, 207, 0.73);
-    font-size: 20px;
-    padding: 5px;
+    /* color: rgba(39, 39, 207, 0.73); */
+    color: rgb(100, 200, 200);
+    font-size: 18px;
+    padding: 15px 5px 5px 5px;
 }
 
 .one {
     padding-left: 20px;
+    font-size: 22px;
     padding:5px 0px 5px 20px;
+}
+
+.period {
+    /* color: rgb(100, 200, 200); */
+    /* font-size: 18px; */
+    padding: 0px 0px 10px 45px;
 }
 
